Fixed some layout issues on small screen

--- a/app/output.css
+++ b/app/output.css
@@ -747,6 +747,14 @@ video {
   height: 100vh;
 }
 
+.h-auto{
+  height: auto;
+}
+
+.h-\[700px\]{
+  height: 700px;
+}
+
 .max-h-10{
   max-height: 2.5rem;
 }
@@ -757,6 +765,10 @@ video {
 
 .min-h-screen{
   min-height: 100vh;
+}
+
+.min-h-\[650px\]{
+  min-height: 650px;
 }
 
 .w-12{
@@ -799,8 +811,24 @@ video {
   width: 90%;
 }
 
+.w-\[310px\]{
+  width: 310px;
+}
+
+.w-\[280px\]{
+  width: 280px;
+}
+
+.w-\[250px\]{
+  width: 250px;
+}
+
 .min-w-\[100px\]{
   min-width: 100px;
+}
+
+.min-w-\[250px\]{
+  min-width: 250px;
 }
 
 .max-w-\[1024px\]{
@@ -841,6 +869,10 @@ video {
 
 .grow-0{
   flex-grow: 0;
+}
+
+.grow{
+  flex-grow: 1;
 }
 
 .-translate-x-1\/2{
@@ -1147,6 +1179,11 @@ video {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
+.bg-green-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-20{
   --tw-bg-opacity: 0.2;
 }
@@ -1267,6 +1304,11 @@ video {
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-16{
@@ -1482,6 +1524,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media (min-width: 640px){
+  .sm\:w-\[300px\]{
+    width: 300px;
+  }
+
+  .sm\:w-\[350px\]{
+    width: 350px;
+  }
+}
+
 @media (min-width: 768px){
   .md\:sticky{
     position: sticky;
@@ -1562,6 +1614,10 @@ video {
     height: 100%;
   }
 
+  .md\:min-h-\[600px\]{
+    min-height: 600px;
+  }
+
   .md\:w-1\/2{
     width: 50%;
   }
@@ -1634,6 +1690,16 @@ video {
     gap: 1rem;
   }
 
+  .md\:gap-x-6{
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .md\:gap-x-10{
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
+  }
+
   .md\:space-y-10 > :not([hidden]) ~ :not([hidden]){
     --tw-space-y-reverse: 0;
     margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1671,6 +1737,11 @@ video {
   .md\:py-\[140px\]{
     padding-top: 140px;
     padding-bottom: 140px;
+  }
+
+  .md\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .md\:text-4xl{
@@ -1783,6 +1854,16 @@ video {
     gap: 1rem;
   }
 
+  .lg\:gap-x-10{
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
+  }
+
+  .lg\:gap-x-12{
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+
   .lg\:self-start{
     align-self: flex-start;
   }
@@ -1808,5 +1889,15 @@ video {
 
   .xl\:w-\[65px\]{
     width: 65px;
+  }
+
+  .xl\:gap-x-16{
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+  }
+
+  .xl\:gap-x-20{
+    -moz-column-gap: 5rem;
+         column-gap: 5rem;
   }
 }
